# directory

./: Cargo.toml
.sqlx/: query-03e552cd8cac6235933cc3a7c6cb2443d2b97db01e2549f198beb0b498fdd905.json  query-0b2b95a2e36f81df1766c2afbcdb5a818efad4c690fc422617c97914f4cc6002.json  query-0fb6c9ef69c745e8e885daab5bc64deaba7c70bc9ead454be6c576b5bf302f85.json  query-14d744de4b77eca6d820f7f95153d1a0c004e033d66f36e108af03357b3347a2.json  query-5afcb42f9baa87da009dfda06f68962d3ea65b0115c309ca7dabdd8d3d638dbf.json  query-76a3d61a998821715428b2ba3d080135cda87abf4bce76e2dfa515d53ed3b4c4.json  query-fb7dfe6f7c607a71d1f01f5ff67aeff794196df79836cf351820155dc2c24e87.json
migrations/: 20250308121720_directory_table.sql  20250308123221_teachers_table.sql
src/: app_state.rs  config.rs  lib.rs  main.rs
src/db/: mod.rs  school_directory_d.rs  teachers_d.rs  teahers_d.rs
src/error/: mod.rs
src/routes/: health.rs  mod.rs  school_directory_r.rs  teachers_r.rs
src/services/: mod.rs  search.rs
